corr categorization_Eneasroman.json

--- a/data/Eneasroman/categorization_Eneasroman.json
+++ b/data/Eneasroman/categorization_Eneasroman.json
@@ -2217,7 +2217,7 @@
     "Bezeichnung": NaN,
     "Erzähler": "der herre Eneas",
     "Bezeichnung 1": "hêrre",
-    "Bezeichnung 2": "#",
+    "Bezeichnung 2": "Eneas",
     "Bezeichnung 3": "",
     "Bezeichnung 4": "",
     "Epitheta 1": "",
@@ -3185,7 +3185,7 @@
     "Nennende Figur": NaN,
     "Bezeichnung": NaN,
     "Erzähler": "der iungelinch",
-    "Bezeichnung 1": "junclich",
+    "Bezeichnung 1": "jungelinc",
     "Bezeichnung 2": "",
     "Bezeichnung 3": "",
     "Bezeichnung 4": "",
