--- a/data/Eneasroman/config_Eneasroman.json
+++ b/data/Eneasroman/config_Eneasroman.json
@@ -1,7 +1,7 @@
 {
   "load_excel": true,
-  "excel_path": "C:/Users/linda/OneDrive - stud.sbg.ac.at/Studium/Dissertation/Programm/data/Eneasroman/Eneasroman_final.xlsx",
+  "excel_path": "C:/Users/linda/OneDrive - stud.sbg.ac.at/Studium/Dissertation/1_Eneasroman/FÜR_PROGRAMM_Eneas_Bezeichnungsformen.xlsx",
   "load_tei": true,
   "tei_path": "C:/Users/linda/OneDrive - stud.sbg.ac.at/Studium/Dissertation/1_Eneasroman/ENE.tei.xml",
-  "modus": "analyze"
+  "modus": "export"
 }
