--- a/data/Eneasroman/config_Eneasroman.json
+++ b/data/Eneasroman/config_Eneasroman.json
@@ -1,7 +1,9 @@
 {
   "load_excel": true,
   "excel_path": "C:/Users/linda/OneDrive - stud.sbg.ac.at/Studium/Dissertation/1_Eneasroman/FÜR_PROGRAMM_Eneas_Bezeichnungsformen.xlsx",
-  "load_tei": true,
-  "tei_path": "C:/Users/linda/OneDrive - stud.sbg.ac.at/Studium/Dissertation/1_Eneasroman/ENE.tei.xml",
-  "modus": "export"
+  "load_tei": false,
+  "modus": "collect",
+  "check_naming_variants": false,
+  "fill_collocations": false,
+  "do_categorization": true
 }
